deploy/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: word-dash
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: word-dash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
        app.kubernetes.io/part-of: word-dash
    spec:
      containers:
        - name: backend
          image: ghcr.io/sras1599/word-dash/backend:v0.0.0 # {"$imagepolicy": "flux-system:word-dash:tag"}
          imagePullPolicy: Always
          ports:
            - name: rest
              containerPort: 8080
            - name: websocket
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /healthz
              port: rest
          livenessProbe:
            httpGet:
              path: /healthz
              port: rest
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: word-dash
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: word-dash
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: rest
      port: 8080
      targetPort: rest
    - name: websocket
      port: 8081
      targetPort: websocket
