deploy/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: word-dash
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: word-dash
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: word-dash
    spec:
      containers:
        - name: frontend
          image: ghcr.io/sras1599/word-dash/frontend:v0.0.0 # {"$imagepolicy": "flux-system:word-dash:tag"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: word-dash
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: word-dash
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
